// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FakeTextField Should have the proper default props 1`] = `
<div
  className="fakeTextField"
>
  <div
    className="jsx-3143559470 fakeTextField-label"
  >
    Hello world
  </div>
</div>
`;

exports[`FakeTextField Should have the text ellipsed 1`] = `
<div
  className="fakeTextField"
>
  <div
    className="jsx-3143559470 fakeTextField-label fakeTextField-label--ellipsis"
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec nec tristique sapien, eu placerat justo. Donec tempor, risus ac cursus fringilla, lorem ipsum facilisis tortor, vel molestie sapien justo nec orci.
  </div>
</div>
`;

exports[`FakeTextField Should support add-ons 1`] = `
<div
  className="fakeTextField"
>
  <div>
    Add-on
  </div>
  <div
    className="jsx-3143559470 fakeTextField-label"
  >
    Hello world
  </div>
</div>
`;

exports[`FakeTextField Should support component links 1`] = `
<a
  className="fakeTextField"
  href="#bar"
>
  <div
    className="jsx-3143559470 fakeTextField-label"
  >
    Click me
  </div>
</a>
`;

exports[`FakeTextField Should support simple links 1`] = `
<a
  className="fakeTextField"
  href="#foo"
>
  <div
    className="jsx-3143559470 fakeTextField-label"
  >
    Click me
  </div>
</a>
`;
